# CMakeOpenGL

./: CMakeLists.txt  OpenGL.cpp  README.md  glad.c
application/: Application.cpp  Application.h  CMakeLists.txt
assets/shaders/: vertex.glsl
glframework/: CMakeLists.txt  core.h  shader.cpp  shader.h  texture.cpp  texture.h
wrapper/: CMakeLists.txt  checkError.cpp  checkError.h
